# crath2

./: AddTests.cpp  CMakeLists.txt  Functions.cpp  ParameterTyping.cpp  StdContext.cpp  StdContext.h  Test.cpp  TestGLFW.cpp  TestResult.cpp  crath.natvis  function_definitions.h  function_testing.h
include/crath/: AddTests.h  Functions.h  ParameterTyping.h  StdContext.h  TestResult.h
include/crath/simd/: Info.h  array_simd.h  double1x4.h  double2x4.h  double4x4.h  float1x4.h  float1x8.h  float2x4.h  float2x8.h  float3x4.h  float3x8.h  int1x4.h  int1x8.h  int2x4.h  int2x8.h  int3x4.h  int3x8.h  simd.h  simd_definitions.h  simd_tests.h  simd_types.h
python/approximations/: expression.py  generate.py  rat_pade.py  remez.py  taylor.py
simd/: Info.cpp  Info.h  aligned_load_hint.cpp  aligned_load_hint.h  array_simd.cpp  array_simd.h  double1x4.cpp  double1x4.h  double2x4.cpp  double2x4.h  double4x4.cpp  double4x4.h  float1x4.cpp  float1x4.h  float1x8.cpp  float1x8.h  float2x4.cpp  float2x4.h  float2x8.cpp  float2x8.h  float3x4.cpp  float3x4.h  float3x8.cpp  float3x8.h  float4x4.cpp  float4x4.h  int1x4.cpp  int1x4.h  int1x8.cpp  int1x8.h  int2x4.cpp  int2x4.h  int2x8.cpp  int2x8.h  int3x4.cpp  int3x4.h  int3x8.cpp  int3x8.h  int4x4.cpp  int4x4.h  (+8 more)
